feat: ajout des ms dans docker

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,10 @@ server {
     listen 80;
 
     location /api/produits {
-        proxy_pass http://host.docker.internal:8080;
+        proxy_pass http://produits:8080;
     }
 
     location /api/stocks/ {
-        proxy_pass http://host.docker.internal:8081;
+        proxy_pass http://stocks:8081;
     }
 }
