--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       # Adresses du broker
       #    depuis l'exterieur: PLAINTEXT://localhost:9092
       #    depuis le cluster: PLAINTEXT_INTERNAL://broker1:19092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT://broker1:9092,PLAINTEXT_INTERNAL://broker1:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker1:9092,PLAINTEXT_INTERNAL://broker1:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
@@ -63,7 +63,7 @@ services:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9093,PLAINTEXT://broker2:9093,PLAINTEXT_INTERNAL://broker2:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker2:9092,PLAINTEXT_INTERNAL://broker2:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
@@ -77,3 +77,25 @@ services:
     environment:
       - KAFKA_CLUSTERS_0_NAME=local
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker1:9092
+
+
+  # Microservices des produits
+  produits:
+    build: ./produits
+    ports:
+      - "8080:8080"
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017
+      - MONGODB_DATABASE=produits
+      - KAFKA_BOOTSTRAP_SERVERS=broker1:9092
+      - KAFKA_TOPIC=stock
+
+  # Microservices des stocks
+  stocks:
+    build: ./stocks
+    ports:
+      - "8081:8080"
+    environment:
+      - MYSQL_HOST=mysql
+      - KAFKA_BOOTSTRAP_SERVERS=broker1:9092
+      - KAFKA_TOPIC=stock
