--- a/produits/build.gradle
+++ b/produits/build.gradle
@@ -18,6 +18,9 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	archiveFileName = 'server.jar'
+}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
