--- a/stocks/src/main/resources/application.yml
+++ b/stocks/src/main/resources/application.yml
@@ -4,8 +4,12 @@ spring:
       ddl-auto: update
       dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
-    url: jdbc:mysql://localhost:3306/stocks?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mysql://${MYSQL_HOST}:3306/stocks?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: root
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      topic: ${KAFKA_TOPIC:stock}
 server:
   port: 8081
