--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,3 +99,73 @@ services:
       - MYSQL_HOST=mysql
       - KAFKA_BOOTSTRAP_SERVERS=broker1:9092
       - KAFKA_TOPIC=stock
+
+# Partie BigData pipelines avec spark et jupyter
+  jupyter-notebook:
+    hostname: jupyter-notebook
+    container_name: jupyter-notebook
+    image: dimajix/jupyter-spark:latest
+    command: notebook
+    build:
+      context:  .
+      args:
+        http_proxy: ${http_proxy}
+        https_proxy: ${https_proxy}
+    env_file:
+      - docker-compose.env
+    environment:
+      - http_proxy=${http_proxy}
+      - https_proxy=${https_proxy}
+    expose:
+      - 8888
+    ports:
+      - 8888:8888
+
+  spark-master:
+    hostname: spark-master
+    container_name: jupyter-spark-master
+    image: dimajix/jupyter-spark:latest
+    command: master
+    env_file:
+      - docker-compose.env
+    environment:
+      - http_proxy=${http_proxy}
+      - https_proxy=${https_proxy}
+    expose:
+      - 6066
+      - 7077
+      - 9090
+    ports:
+      - 6066:6066
+      - 7077:7077
+      - 9090:9090
+
+  spark-slave-1:
+    hostname: spark-slave-1
+    container_name: jupyter-spark-slave-1
+    image: dimajix/jupyter-spark:latest
+    command: slave
+    env_file:
+      - docker-compose.env
+    environment:
+      - http_proxy=${http_proxy}
+      - https_proxy=${https_proxy}
+    expose:
+      - 9090
+    ports:
+      - 9091:9090
+
+  spark-slave-2:
+    hostname: spark-slave-2
+    container_name: jupyter-spark-slave-2
+    image: dimajix/jupyter-spark:latest
+    command: slave
+    env_file:
+      - docker-compose.env
+    environment:
+      - http_proxy=${http_proxy}
+      - https_proxy=${https_proxy}
+    expose:
+      - 9090
+    ports:
+      - 9099:9090
